install Colorful.Console

--- a/src/LuaBundler.Cli/LuaBundler.Cli.csproj
+++ b/src/LuaBundler.Cli/LuaBundler.Cli.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\LuaBundler.Core\LuaBundler.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Colorful.Console" Version="1.2.15" />
+    </ItemGroup>
+
 </Project>
